# RuLyric

./: .betterncm-ignore  .gitignore  .gitmodules  README.md  RuLyrics.plugin  build.js  build.ps1  build_dev.ps1  index.js  manifest.json  package.json  rome.json  tsconfig.json
.github/workflows/: rust.yml
native/: Cargo.toml
native/src/: lib.rs  lyrics_app.rs  win_helper.rs
native/src/model/: font.rs  lyrics.rs  mod.rs
native/src/widgets/: glow.rs  lyrics.rs  mod.rs
src/: global.d.ts  hooks.ts  index.tsx  ncm.ts
